Design minor fix for grid (visible only when compiled)

--- a/src/components/Grid/Grid.less
+++ b/src/components/Grid/Grid.less
@@ -1,5 +1,6 @@
 .contentGrid{
     margin-top: 75px;
+    overflow: hidden;
 }
 
 .noResults{
@@ -7,6 +8,6 @@
     font-family: "Roboto", "Helvetica", "Arial", sans-serif;
 }
 
-div[class^="MuiListSubheader"]{
-    font-size: 20px;
+.headerText{
+    font-size: 20px !important;
 }
