--- a/src/style/common.less
+++ b/src/style/common.less
@@ -7,7 +7,3 @@ body{
 .hidden{
     display: none !important;
 }
-
-.MuiGrid-spacing-xs-16-58{
-    width:100% !important;
-}
